Fixed bug with scrollbar on social media icons

--- a/sass/partials/_reset.scss
+++ b/sass/partials/_reset.scss
@@ -7,3 +7,6 @@ body {
 img {
 	display: block;
 }
+ul {
+	overflow: hidden;
+}
